删除表格排序

--- a/app/views/csi/surveys/index.html.erb
+++ b/app/views/csi/surveys/index.html.erb
@@ -35,10 +35,10 @@
         </div>
         <%= datatable("survey",url_for(:action=>"get_data"),
                   [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.template",:width=>"80px"},
-                   {:key=>"title",:label=>t(:label_csi_survey_title),:sortable=>true,:searchable=>true},
-                   {:key=>"joined_count",:label=>t(:label_csi_survey_joined_count),:sortable=>true,:formatter=>"Y.irm.template", :width=>"35px"},
-                   {:key=>"person_count",:label=>t(:label_csi_survey_person_count),:sortable=>true,:formatter=>"Y.irm.template", :width=>"35px"},
-                   {:key=>"published_at",:label=>t(:label_csi_survey_created_at),:sortable=>true, :width=>"80px"},
+                   {:key=>"title",:label=>t(:label_csi_survey_title),:searchable=>true},
+                   {:key=>"joined_count",:label=>t(:label_csi_survey_joined_count),:formatter=>"Y.irm.template", :width=>"35px"},
+                   {:key=>"person_count",:label=>t(:label_csi_survey_person_count),:formatter=>"Y.irm.template", :width=>"35px"},
+                   {:key=>"published_at",:label=>t(:label_csi_survey_created_at), :width=>"80px"},
                    {:key=>"allow_author_only", :hidden => true}],
                    {:paginator_box=>"surveryPaginator",:search_box=>"permissionsSearchBox"})%>
         <div id="surveryPaginator"></div>
