--- a/app/views/irm/delayed_jobs/item_list.html.erb
+++ b/app/views/irm/delayed_jobs/item_list.html.erb
@@ -67,9 +67,9 @@
       </div>
         <%= datatable("delayed_job",url_for(:action=>"get_item_data",:controller => "irm/delayed_jobs",:delayed_job_id => @log.delayed_job_id),
                   [{:key=>"id",:label=>t(:edit),:hidden=>true},
-                   {:key=>"created_at",:label=>t(:label_irm_delayed_jobs_record_item_record_at),:sortable=>true,:width=>"90px"},
-                   {:key=>"job_status_name",:label=>t(:label_irm_delayed_jobs_record_status),:sortable=>true,:width=>"90px"},
-                   {:key=>"content",:label=>t(:label_irm_delayed_jobs_record_item_content),:formatter=>"Y.irm.template",:sortable=>true,:width=>"400px"}])%>
+                   {:key=>"created_at",:label=>t(:label_irm_delayed_jobs_record_item_record_at),:width=>"90px"},
+                   {:key=>"job_status_name",:label=>t(:label_irm_delayed_jobs_record_status),:width=>"90px"},
+                   {:key=>"content",:label=>t(:label_irm_delayed_jobs_record_item_content),:formatter=>"Y.irm.template",:width=>"400px"}])%>
         <div id="companiesPaginatorBox"></div>
       </div>
     </div>
