--- a/app/views/irm/ldap_auth_headers/index.html.erb
+++ b/app/views/irm/ldap_auth_headers/index.html.erb
@@ -32,7 +32,7 @@
                                               { :key => "name", :label => t(:ldap_auth_header_auth_code),:searchable=>true },
                                               { :key => "auth_cn", :label => t(:ldap_auth_header_auth_cn),:searchable=>true },
                                               { :key => "description", :label => t(:ldap_auth_header_description),:searchable=>true },
-                                              { :key => "status_code",:label=>t(:active),:sortable=>true,:formatter=>"Y.irm.template", :width => "40px"}],
+                                              { :key => "status_code",:label=>t(:active),:formatter=>"Y.irm.template", :width => "40px"}],
                                               {:row_perpage=>20,:search_box=>"ldap_auth_headersSearchBox"})%>
       </div>
     </div>
