--- a/app/views/irm/ldap_auth_headers/show.html.erb
+++ b/app/views/irm/ldap_auth_headers/show.html.erb
@@ -101,7 +101,7 @@
                        { :key => "local_attr", :label => t(:label_ldap_auth_attribute_local_attr),:searchable=>true,:width=>"200px" },
                        { :key => "ldap_attr", :label => t(:label_ldap_auth_attribute_ldap_attr)},
                        { :key => "description", :label => t(:ldap_auth_header_description),:searchable=>true },
-                       { :key => "status_code",:label=>t(:active),:sortable=>true,:formatter=>"Y.irm.template", :width => "40px"}
+                       { :key => "status_code",:label=>t(:active),:formatter=>"Y.irm.template", :width => "40px"}
                       ],{:search_box=>"object_attributesSearchBox"})%>
 
       </div>
