--- a/app/views/irm/menus/index.html.erb
+++ b/app/views/irm/menus/index.html.erb
@@ -28,10 +28,10 @@
         </div>
         <%= datatable("menus_list",url_for(:action=>"get_data",:format=>"json"),
                       [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.template", :width => "80px"},
-                       {:key=>"code",:label=>t(:label_irm_menu_menu_code),:sortable=>true, :width => "20%",:searchable=>true},
-                       {:key=>"name",:label=>t(:label_irm_menu_name),:sortable=>true, :width => "25%",:searchable=>true},
-                       {:key=>"description",:label=>t(:label_irm_menu_description),:sortable=>true},
-                       {:key=>"status_code",:label=>t(:active),:sortable=>true,:formatter=>"Y.irm.template", :width => "40px"}],
+                       {:key=>"code",:label=>t(:label_irm_menu_menu_code), :width => "20%",:searchable=>true},
+                       {:key=>"name",:label=>t(:label_irm_menu_name), :width => "25%",:searchable=>true},
+                       {:key=>"description",:label=>t(:label_irm_menu_description)},
+                       {:key=>"status_code",:label=>t(:active),:formatter=>"Y.irm.template", :width => "40px"}],
                        {:search_box=>"menusSearchBox",:paginator_perpage=>false,:paginator_box=>"menusPaginatorBox"}) %>
         <div id="menusPaginatorBox"></div>
       </div>
