--- a/app/views/irm/x_report_lists/index.html.erb
+++ b/app/views/irm/x_report_lists/index.html.erb
@@ -41,8 +41,8 @@
         <%= datatable("report_list",url_for(:action=>"get_data", :report_category => @report_category,:format=>"json"),
                   [{:key=>"id",:label=>t(:operation),:hidden => true},
                    {:key=>"name",:label=>t(:label_irm_report_name),:formatter=>"Y.irm.template", :sortable=>true,:searchable=>true,:width=>"250px"},
-                   {:key=>"category_name",:label=>t(:label_irm_report_category),:sortable=>true, :width => "100px"},
-                   {:key=>"description",:label=>t(:label_irm_report_description),:sortable=>true},
+                   {:key=>"category_name",:label=>t(:label_irm_report_category), :width => "100px"},
+                   {:key=>"description",:label=>t(:label_irm_report_description)},
                    {:key=>"page_controller",:label=>t(:label_irm_report_page_controller),:hidden=>true},
                    {:key=>"page_action",:label=>t(:label_irm_report_page_action),:hidden=>true},
                    {:key=>"url",:label=> "#",:hidden=>true}],
