--- a/app/views/skm/entry_headers/index_search.html.erb
+++ b/app/views/skm/entry_headers/index_search.html.erb
@@ -39,8 +39,8 @@
         </div>
         <%= datatable("entry_headers_list",url_for(:action=>"index_search_get_data",:format=>"json", :search_value => @search_value),
                   [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.template",:width=>"90px"},
-                   {:key=>"full_title",:label=>t(:label_skm_entry_header_title),:sortable=>true, :searchable => true,:formatter=>"Y.irm.template"},
-                   {:key=>"published_date",:label=>t(:label_skm_entry_header_published_date),:sortable=>true, :width => "180px"}],
+                   {:key=>"full_title",:label=>t(:label_skm_entry_header_title), :searchable => true,:formatter=>"Y.irm.template"},
+                   {:key=>"published_date",:label=>t(:label_skm_entry_header_published_date), :width => "180px"}],
                    {:search_box => "entryHeadersSearchBox"})%>
       </div>
     </div>
