--- a/app/views/icm/close_reasons/index.html.erb
+++ b/app/views/icm/close_reasons/index.html.erb
@@ -24,8 +24,8 @@
         </div>
         <%= datatable("close_reason_list",url_for(:action=>"get_data",:format=>"json"),
                       [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.template",:width=>"80px"},
-                       {:key=>"name",:label=>t(:label_icm_close_reason_name),:sortable=>true},
-                       {:key=>"close_code",:label=>t(:label_icm_close_reason_close_code),:sortable=>true}
+                       {:key=>"name",:label=>t(:label_icm_close_reason_name)},
+                       {:key=>"close_code",:label=>t(:label_icm_close_reason_close_code)}
                        ],{:paginator_box=>"closePaginator"})%>
         <div id="closePaginator"></div>
       </div>
