--- a/app/views/icm/incident_statuses/index.html.erb
+++ b/app/views/icm/incident_statuses/index.html.erb
@@ -98,13 +98,13 @@
         </div>
         <%= datatable("incident_status",url_for(:action=>"get_data",:format=>"json"),
                   [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.template",:width=>"80px"},
-                   {:key=>"phase_name",:label=>t(:label_icm_incident_status_phase_code),:sortable=>true,:searchable=>true},
-                   {:key=>"incident_status_code",:label=>t(:label_icm_incident_status_incident_status_code),:sortable=>true,:searchable=>true},
-                   {:key=>"name",:label=>t(:label_icm_incident_status_name),:sortable=>true,:searchable=>true},
-                   {:key=>"display_sequence",:label=>t(:display_sequence),:sortable=>true},
-                   {:key=>"default_flag",:label=>t(:default_flag),:sortable=>true,:formatter=>"Y.irm.template", :width => "40px"},
-                   {:key=>"close_flag",:label=>t(:label_icm_incident_close_flag),:sortable=>true,:formatter=>"Y.irm.template", :width => "40px"},
-                   {:key=>"status_meaning",:label=>t(:label_irm_script_status_code),:sortable=>true,:width=>"70px"}],
+                   {:key=>"phase_name",:label=>t(:label_icm_incident_status_phase_code),:searchable=>true},
+                   {:key=>"incident_status_code",:label=>t(:label_icm_incident_status_incident_status_code),:searchable=>true},
+                   {:key=>"name",:label=>t(:label_icm_incident_status_name),:searchable=>true},
+                   {:key=>"display_sequence",:label=>t(:display_sequence)},
+                   {:key=>"default_flag",:label=>t(:default_flag),:formatter=>"Y.irm.template", :width => "40px"},
+                   {:key=>"close_flag",:label=>t(:label_icm_incident_close_flag),:formatter=>"Y.irm.template", :width => "40px"},
+                   {:key=>"status_meaning",:label=>t(:label_irm_script_status_code),:width=>"70px"}],
                    {:paginator_box=>"statusPaginator",:search_box=>"incidentStatusesSearchBox"})%>
         <div id="statusPaginator"></div>
       </div>
