--- a/app/views/irm/flex_value_sets/index.html.erb
+++ b/app/views/irm/flex_value_sets/index.html.erb
@@ -28,7 +28,7 @@
         </div>
         <%= datatable("flex_value_sets_list",url_for(:action=>"get_data",:format=>"json"),
                       [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.template", :width => "80px"},
-                       {:key=>"flex_value_set_name",:label=>t(:label_irm_value_set_name),:sortable=>true, :width => "30%", :searchable=>true},
+                       {:key=>"flex_value_set_name",:label=>t(:label_irm_value_set_name), :width => "30%", :searchable=>true},
                        {:key=>"description",:label=>t(:label_irm_value_set_description)},
                        {:key=>"status_code",:label=>t(:active),:formatter=>"Y.irm.template", :width => "40px"}],
                        {:search_box=>"flexValueSetsSearchBox",:paginator_box=>"flexValuePagiantor"}) %>
