--- a/app/views/irm/function_groups/show.html.erb
+++ b/app/views/irm/function_groups/show.html.erb
@@ -66,10 +66,10 @@
         </div>
         <%= datatable("functions_list",url_for(:controller=>"irm/functions",:action=>"get_data",:function_group_id=>@function_group.id,:format=>"json"),
                       [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.template", :width => "80px"},
-                       {:key=>"code",:label=>t(:label_irm_function_function_code),:sortable=>true},
-                       {:key=>"name",:label=>t(:label_irm_function_name),:sortable=>true},
-                       {:key=>"description",:label=>t(:label_irm_function_description),:sortable=>true},
-                       {:key=>"status_code",:label=>t(:active),:sortable=>true,:formatter=>"Y.irm.template"}],
+                       {:key=>"code",:label=>t(:label_irm_function_function_code)},
+                       {:key=>"name",:label=>t(:label_irm_function_name)},
+                       {:key=>"description",:label=>t(:label_irm_function_description)},
+                       {:key=>"status_code",:label=>t(:active),:formatter=>"Y.irm.template"}],
                        {:paginator_box=>"functionPaginator"}) %>
         <div id="functionPaginator"></div>
       </div>
