--- a/app/views/irm/groups/show.html.erb
+++ b/app/views/irm/groups/show.html.erb
@@ -82,9 +82,9 @@
           <!-- Begin company access table -->
             <%= datatable("person",url_for(:controller=>"irm/group_members",:action=>"get_data",:id=>@group.id),
                               [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.template",:width=>"40px"},
-                               {:key=>"person_name",:label=>t(:label_irm_group_person_name),:sortable=>true},
-                               {:key=>"organization_name",:label=>t(:label_irm_group_organization_name),:sortable=>true},
-                               {:key=>"email_address",:label=>t(:label_irm_person_email_address),:sortable=>true}],
+                               {:key=>"person_name",:label=>t(:label_irm_group_person_name)},
+                               {:key=>"organization_name",:label=>t(:label_irm_group_organization_name)},
+                               {:key=>"email_address",:label=>t(:label_irm_person_email_address)}],
                                {:paginator_box=>"personPaginator"})%>
           <div id="personPaginator"></div>
         </div>
