--- a/app/views/irm/id_flexes/show.html.erb
+++ b/app/views/irm/id_flexes/show.html.erb
@@ -72,11 +72,11 @@
         </div>
         <%= datatable("flex_structures_list",url_for(:controller => "irm/id_flex_structures", :action=>"get_data", :id_flex_code => @id_flex.id_flex_code,:format=>"json"),
                       [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.template", :width => "40px"},
-                       {:key=>"id_flex_structure_code",:label=>t(:label_irm_id_flex_structure_code),:sortable=>true},
-                       {:key=>"id_flex_structure_name",:label=>t(:label_irm_id_flex_structure_name),:sortable=>true},
-                       {:key=>"description",:label=>t(:label_irm_id_flex_structure_description),:sortable=>true},
-                       {:key=>"concatenated_segment_delimiter",:label=>t(:label_irm_id_flex_structure_concatenated_segment_delimiter),:sortable=>true},
-                       {:key=>"status_code",:label=>t(:active),:sortable=>true}]) %>
+                       {:key=>"id_flex_structure_code",:label=>t(:label_irm_id_flex_structure_code)},
+                       {:key=>"id_flex_structure_name",:label=>t(:label_irm_id_flex_structure_name)},
+                       {:key=>"description",:label=>t(:label_irm_id_flex_structure_description)},
+                       {:key=>"concatenated_segment_delimiter",:label=>t(:label_irm_id_flex_structure_concatenated_segment_delimiter)},
+                       {:key=>"status_code",:label=>t(:active)}]) %>
       </div>
     </div>
 </div>
