--- a/app/views/irm/lookup_types/index.html.erb
+++ b/app/views/irm/lookup_types/index.html.erb
@@ -25,11 +25,11 @@
         </div>
         <%= datatable("lookup_type",url_for(:controller=>"irm/lookup_types",:action=>"get_lookup_types",:format=>"json"),
                   [{:key=>"id",:label=>t(:edit),:formatter=>"Y.irm.template",:width=>"80px"},
-                   {:key=>"lookup_level",:label=>t(:label_lookup_level),:sortable=>true,:width=>"80px"},
-                   {:key=>"lookup_type",:label=>t(:label_lookup_types_code),:sortable=>true,:searchable=>true,:width=>"10%"},
-                   {:key=>"meaning",:label=>t(:label_meaning),:sortable=>true,:searchable=>true,:width=>"20%"},
-                   {:key=>"description",:label=>t(:label_description),:sortable=>true},
-                   {:key=>"status_meaning",:label=>t(:label_status_code),:sortable=>true,:width=>"40px"}],
+                   {:key=>"lookup_level",:label=>t(:label_lookup_level),:width=>"80px"},
+                   {:key=>"lookup_type",:label=>t(:label_lookup_types_code),:searchable=>true,:width=>"10%"},
+                   {:key=>"meaning",:label=>t(:label_meaning),:searchable=>true,:width=>"20%"},
+                   {:key=>"description",:label=>t(:label_description)},
+                   {:key=>"status_meaning",:label=>t(:label_status_code),:width=>"40px"}],
                    {:search_box=>"permissionsSearchBox",:paginator_box=>"lookupTypePaginator"})%>
         <div id="lookupTypePaginator"></div>
       </div>
