--- a/app/views/irm/menu_entries/index.html.erb
+++ b/app/views/irm/menu_entries/index.html.erb
@@ -40,15 +40,15 @@
         </div>
         <%= datatable("menu_entries_list",url_for(:controller => "irm/menu_entries", :action=>"get_data", :menu_code => @menu.menu_code,:format=>"json"),
                       [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.template", :width => "80px"},
-                       {:key=>"display_sequence",:label=>t(:label_irm_menu_entry_display_sequence),:sortable=>true},
-                       {:key=>"name",:label=>t(:label_irm_menu_entry_name),:sortable=>true},
-                       {:key=>"description",:label=>t(:label_irm_menu_entry_description),:sortable=>true},
-                       {:key=>"sub_menu_code",:label=>t(:label_irm_menu_entry_sub_menu),:sortable=>true},
-                       {:key=>"permission_code",:label=>t(:label_irm_menu_entry_page),:sortable=>true},
-                       {:key=>"icon",:label=>t(:label_irm_menu_entry_icon),:sortable=>true},
-                       {:key=>"css_name",:label=>t(:label_irm_menu_entry_css_name),:sortable=>true},
-                       {:key=>"display_flag",:label=>t(:label_irm_menu_entry_display_flag),:sortable=>true},
-                       {:key=>"status_code",:label=>t(:active),:sortable=>true}],
+                       {:key=>"display_sequence",:label=>t(:label_irm_menu_entry_display_sequence)},
+                       {:key=>"name",:label=>t(:label_irm_menu_entry_name)},
+                       {:key=>"description",:label=>t(:label_irm_menu_entry_description)},
+                       {:key=>"sub_menu_code",:label=>t(:label_irm_menu_entry_sub_menu)},
+                       {:key=>"permission_code",:label=>t(:label_irm_menu_entry_page)},
+                       {:key=>"icon",:label=>t(:label_irm_menu_entry_icon)},
+                       {:key=>"css_name",:label=>t(:label_irm_menu_entry_css_name)},
+                       {:key=>"display_flag",:label=>t(:label_irm_menu_entry_display_flag)},
+                       {:key=>"status_code",:label=>t(:active)}],
                        {:search_box=>"entriesSearchBox"}) %>
       </div>
     </div>
