--- a/app/views/irm/product_modules/_data_grid.html.erb
+++ b/app/views/irm/product_modules/_data_grid.html.erb
@@ -25,11 +25,11 @@
           </div>
         </div>
         <%= datatable("product_modules_list",url_for(:action=>"get_data",:format=>"json"),
-                  [{:key=>"product_short_name",:label=>t(:label_irm_product_module_product_short_name),:sortable=>true, :width => "15%",:searchable=>true},
-                   {:key=>"name",:label=>t(:label_irm_product_module_name),:sortable=>true, :width => "30%",:searchable=>true},
-                   {:key=>"description",:label=>t(:label_irm_product_module_description),:sortable=>true},
-                   {:key=>"installed_flag",:label=>t(:label_irm_product_module_installed_flag),:sortable=>true,:formatter=>"Y.irm.template", :width => "40px"},
-                   {:key=>"status_code",:label=>t(:active),:sortable=>true,:formatter=>"Y.irm.template", :width => "40px"}],
+                  [{:key=>"product_short_name",:label=>t(:label_irm_product_module_product_short_name), :width => "15%",:searchable=>true},
+                   {:key=>"name",:label=>t(:label_irm_product_module_name), :width => "30%",:searchable=>true},
+                   {:key=>"description",:label=>t(:label_irm_product_module_description)},
+                   {:key=>"installed_flag",:label=>t(:label_irm_product_module_installed_flag),:formatter=>"Y.irm.template", :width => "40px"},
+                   {:key=>"status_code",:label=>t(:active),:formatter=>"Y.irm.template", :width => "40px"}],
                    {:search_box=>"productModulesSearchBox"})%>
       </div>
     </div>
