--- a/app/views/irm/regions/index.html.erb
+++ b/app/views/irm/regions/index.html.erb
@@ -25,10 +25,10 @@
         </div>
         <%= datatable("region",url_for(:action=>"get_data",:format=>"json"),
                   [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.template",:width=>"80px"},
-                   {:key=>"region_code",:label=>t(:label_irm_region_region_code),:sortable=>true,:searchable=>true,:width=>"10%"},
-                   {:key=>"name",:label=>t(:label_irm_region_name),:sortable=>true,:searchable=>true,:width=>"20%"},
-                   {:key=>"description",:label=>t(:label_irm_region_description),:sortable=>true},
-                   {:key=>"status_meaning",:label=>t(:label_irm_region_status_code),:sortable=>true,:width=>"40px"}],
+                   {:key=>"region_code",:label=>t(:label_irm_region_region_code),:searchable=>true,:width=>"10%"},
+                   {:key=>"name",:label=>t(:label_irm_region_name),:searchable=>true,:width=>"20%"},
+                   {:key=>"description",:label=>t(:label_irm_region_description)},
+                   {:key=>"status_meaning",:label=>t(:label_irm_region_status_code),:width=>"40px"}],
                    {:search_box=>"permissionsSearchBox",:paginator_box=>"regionPaginator"})%>
         <div id="regionPaginator"></div>
       </div>
