--- a/app/views/irm/reports/index.html.erb
+++ b/app/views/irm/reports/index.html.erb
@@ -61,8 +61,8 @@
         <%= datatable("report_list",url_for(:action=>"get_data", :folder_id => @folder_id,:format=>"json"),
                   [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.stemplate", :width => "90px"},
                    {:key=>"name",:label=>t(:label_irm_report_name),:formatter=>"Y.irm.stemplate", :sortable=>true,:searchable=>true,:width=>"250px"},
-                   @folder_id.present? ? nil:{:key=>"report_folder_name",:label=>t(:label_irm_report_folder),:sortable=>true, :width => "150px"} ,
-                   {:key=>"report_type_name",:label=>t(:label_irm_report_type),:sortable=>true, :width => "150px"},
+                   @folder_id.present? ? nil:{:key=>"report_folder_name",:label=>t(:label_irm_report_folder), :width => "150px"} ,
+                   {:key=>"report_type_name",:label=>t(:label_irm_report_type), :width => "150px"},
                    {:key=>"editable_flag",:hidden=>true},
                    {:key=>"report_trigger_id",:hidden=>true},
                    {:key=>"description",:label=>t(:label_irm_report_description)}].compact,
