--- a/app/views/irm/site_groups/index.html.erb
+++ b/app/views/irm/site_groups/index.html.erb
@@ -25,11 +25,11 @@
         </div>
         <%= datatable("site_group",url_for(:action=>"get_data",:format=>"json"),
                   [{:key=>"id",:label=>t(:edit),:formatter=>"Y.irm.template",:width=>"80px"},
-                   {:key=>"region_name",:label=>t(:label_irm_site_group_region_name),:sortable=>true,:searchable=>true,:width=>"15%"},
-                   {:key=>"group_code",:label=>t(:label_irm_site_group_group_code),:sortable=>true,:searchable=>true,:width=>"10%"},
-                   {:key=>"name",:label=>t(:label_irm_site_group_name),:sortable=>true,:searchable=>true,:width=>"20%"},
-                   {:key=>"description",:label=>t(:label_irm_site_group_description),:sortable=>true},
-                   {:key=>"status_meaning",:label=>t(:label_irm_site_group_status_code),:sortable=>true,:width=>"40px"}],
+                   {:key=>"region_name",:label=>t(:label_irm_site_group_region_name),:searchable=>true,:width=>"15%"},
+                   {:key=>"group_code",:label=>t(:label_irm_site_group_group_code),:searchable=>true,:width=>"10%"},
+                   {:key=>"name",:label=>t(:label_irm_site_group_name),:searchable=>true,:width=>"20%"},
+                   {:key=>"description",:label=>t(:label_irm_site_group_description)},
+                   {:key=>"status_meaning",:label=>t(:label_irm_site_group_status_code),:width=>"40px"}],
                    {:paginator_box=>"sitegroupPaginator",:search_box=>"permissionsSearchBox"})%>
         <div id="sitegroupPaginator"></div>
       </div>
