--- a/app/views/irm/todo_events/my_events_index.html.erb
+++ b/app/views/irm/todo_events/my_events_index.html.erb
@@ -30,12 +30,12 @@
         </div>
         <%= datatable("my_tasks_list",url_for(:controller => "irm/todo_events", :action=>"my_events_get_data",:format=>"json"),
                       [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.template",:width=>"80px"},
-                       {:key=>"name",:label=>t(:label_irm_todo_event_name),:sortable=>true, :width => "150px"},
-                       {:key=>"start_at",:label=>t(:label_irm_todo_event_start_at),:sortable=>true, :width => "100px"},
-                       {:key=>"end_at",:label=>t(:label_irm_todo_event_end_at),:sortable=>true, :width => "100px"},
-                       {:key=>"priority_name",:label=>t(:label_irm_todo_event_priority),:sortable=>true, :width => "100px"},
-                       {:key=>"event_status_name",:label=>t(:label_irm_todo_event_event_status),:sortable=>true, :width => "80px"},
-                       {:key=>"status_code",:label=>t(:active),:sortable=>true,:formatter=>"Y.irm.template", :width => "40px"}])%>
+                       {:key=>"name",:label=>t(:label_irm_todo_event_name), :width => "150px"},
+                       {:key=>"start_at",:label=>t(:label_irm_todo_event_start_at), :width => "100px"},
+                       {:key=>"end_at",:label=>t(:label_irm_todo_event_end_at), :width => "100px"},
+                       {:key=>"priority_name",:label=>t(:label_irm_todo_event_priority), :width => "100px"},
+                       {:key=>"event_status_name",:label=>t(:label_irm_todo_event_event_status), :width => "80px"},
+                       {:key=>"status_code",:label=>t(:active),:formatter=>"Y.irm.template", :width => "40px"}])%>
       </div>
     </div>
 </div>
