--- a/app/views/irm/todo_tasks/_data_grid.html.erb
+++ b/app/views/irm/todo_tasks/_data_grid.html.erb
@@ -23,9 +23,9 @@
         </div>
         <%= datatable("todo_tasks_list",url_for(:controller => "irm/todo_tasks", :action=>"get_data",:format=>"json"),
                       [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.template",:width=>"80px"},
-                       {:key=>"name",:label=>t(:label_irm_todo_task_name),:sortable=>true, :width => "150px"},
-                       {:key=>"due_date",:label=>t(:label_irm_todo_task_due_date),:sortable=>true, :width => "80px"},
-                       {:key=>"description",:label=>t(:description),:sortable=>true, :width => "200px"}],
+                       {:key=>"name",:label=>t(:label_irm_todo_task_name), :width => "150px"},
+                       {:key=>"due_date",:label=>t(:label_irm_todo_task_due_date), :width => "80px"},
+                       {:key=>"description",:label=>t(:description), :width => "200px"}],
                       {:paginator_box=>"todoTasksPaginator"})%>
         <div id="todoTasksPaginator"></div>
       </div>
