--- a/app/views/irm/todo_tasks/my_tasks_index.html.erb
+++ b/app/views/irm/todo_tasks/my_tasks_index.html.erb
@@ -30,11 +30,11 @@
         </div>
         <%= datatable("my_tasks_list",url_for(:controller => "irm/todo_tasks", :action=>"my_tasks_get_data",:format=>"json"),
                       [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.template",:width=>"80px"},
-                       {:key=>"name",:label=>t(:label_irm_todo_task_name),:sortable=>true, :width => "150px"},
-                       {:key=>"start_at",:label=>t(:label_irm_todo_task_start_at),:sortable=>true, :width => "100px"},
-                       {:key=>"due_date",:label=>t(:label_irm_todo_task_due_date),:sortable=>true, :width => "100px"},
-                       {:key=>"priority_name",:label=>t(:label_irm_todo_task_priority),:sortable=>true, :width => "100px"},
-                       {:key=>"task_status_name",:label=>t(:label_irm_todo_task_task_status),:sortable=>true, :width => "80px"}])%>
+                       {:key=>"name",:label=>t(:label_irm_todo_task_name), :width => "150px"},
+                       {:key=>"start_at",:label=>t(:label_irm_todo_task_start_at), :width => "100px"},
+                       {:key=>"due_date",:label=>t(:label_irm_todo_task_due_date), :width => "100px"},
+                       {:key=>"priority_name",:label=>t(:label_irm_todo_task_priority), :width => "100px"},
+                       {:key=>"task_status_name",:label=>t(:label_irm_todo_task_task_status), :width => "80px"}])%>
       </div>
     </div>
 </div>
