--- a/app/views/skm/entry_headers/_data_grid.html.erb
+++ b/app/views/skm/entry_headers/_data_grid.html.erb
@@ -30,8 +30,8 @@
         </div>
         <%= datatable("entry_headers_list",url_for(:action=>"get_data",:format=>"json"),
                   [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.template",:width=>"120px"},
-                   {:key=>"full_title",:label=>t(:label_skm_entry_header_title),:sortable=>true, :searchable => true,:formatter=>"Y.irm.template"},
-                   {:key=>"published_date_f",:label=>t(:label_skm_entry_header_published_date),:sortable=>true, :width => "180px"},
+                   {:key=>"full_title",:label=>t(:label_skm_entry_header_title), :searchable => true,:formatter=>"Y.irm.template"},
+                   {:key=>"published_date_f",:label=>t(:label_skm_entry_header_published_date), :width => "180px"},
                    {:key=>"is_favorite", :hidden => true}],
                    {:search_box => "entryHeadersSearchBox", :paginator_box => "entry_headers_list_paginator_box", :not_load => true })%>
         <div id="entry_headers_list_paginator_box"></div>
