--- a/app/views/skm/entry_headers/my_favorites.html.erb
+++ b/app/views/skm/entry_headers/my_favorites.html.erb
@@ -26,8 +26,8 @@
         </div>
         <%= datatable("favorites_list",url_for(:action=>"my_favorites_data",:format=>"json", :person_id => Irm::Person.current.id),
                   [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.template",:width=>"80px"},
-                   {:key=>"full_title",:label=>t(:label_skm_entry_header_title),:sortable=>true,:formatter=>"Y.irm.template"},
-                   {:key=>"published_date_f",:label=>t(:label_skm_entry_header_published_date),:sortable=>true, :width => "180px"}
+                   {:key=>"full_title",:label=>t(:label_skm_entry_header_title),:formatter=>"Y.irm.template"},
+                   {:key=>"published_date_f",:label=>t(:label_skm_entry_header_published_date), :width => "180px"}
                    ])%>
       </div>
     </div>
