--- a/app/views/skm/entry_statuses/_data_grid.html.erb
+++ b/app/views/skm/entry_statuses/_data_grid.html.erb
@@ -29,11 +29,11 @@
         </div>
         <%= datatable("entry_statuses_list",url_for(:action=>"get_data",:format=>"json"),
                   [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.template",:width=>"60px"},
-                   {:key=>"entry_status_code",:label=>t(:label_skm_entry_status_code),:sortable=>true, :searchable => true,:width=>"100px"},
-                   {:key=>"name",:label=>t(:name),:sortable=>true, :searchable => true,:width=>"150px"},
-                   {:key=>"description",:label=>t(:description),:sortable=>true},
-                   {:key=>"visiable_flag",:label=>t(:label_skm_entry_status_visiable),:formatter=>"Y.irm.template",:sortable=>true,:width=>"40px"},
-                   {:key=>"status_code",:label=>t(:active),:formatter=>"Y.irm.template",:sortable=>true, :width => "40px"}], {:search_box => "statusesSearchBox"})%>
+                   {:key=>"entry_status_code",:label=>t(:label_skm_entry_status_code), :searchable => true,:width=>"100px"},
+                   {:key=>"name",:label=>t(:name), :searchable => true,:width=>"150px"},
+                   {:key=>"description",:label=>t(:description)},
+                   {:key=>"visiable_flag",:label=>t(:label_skm_entry_status_visiable),:formatter=>"Y.irm.template",:width=>"40px"},
+                   {:key=>"status_code",:label=>t(:active),:formatter=>"Y.irm.template", :width => "40px"}], {:search_box => "statusesSearchBox"})%>
       </div>
     </div>
 </div>
