--- a/app/views/skm/entry_templates/select_elements.html.erb
+++ b/app/views/skm/entry_templates/select_elements.html.erb
@@ -30,10 +30,10 @@
                 </div>
                 <%= datatable("available_elements_list",url_for(:action=>"get_available_elements", :template_id=>@template),
                           [{:key=>"id",:label=>t(:select_ac),:formatter=>"Y.irm.template",:width=>"20px"},
-                           {:key=>"entry_template_element_code",:label=>t(:label_skm_entry_template_element_code),:sortable=>true, :width => "15%"},
-                           {:key=>"name",:label=>t(:name),:sortable=>true, :width => "25%"},
-                           {:key=>"description",:label=>t(:description),:sortable=>true},
-                           {:key=>"default_rows",:label=>t(:label_skm_entry_template_element_rows),:sortable=>true, :width => "80px"}
+                           {:key=>"entry_template_element_code",:label=>t(:label_skm_entry_template_element_code), :width => "15%"},
+                           {:key=>"name",:label=>t(:name), :width => "25%"},
+                           {:key=>"description",:label=>t(:description)},
+                           {:key=>"default_rows",:label=>t(:label_skm_entry_template_element_rows), :width => "80px"}
                            ],
                            {:row_perpage=>5})%>
           </div>
