--- a/app/views/skm/entry_templates/show.html.erb
+++ b/app/views/skm/entry_templates/show.html.erb
@@ -79,11 +79,11 @@
         <%= datatable("entry_elements_list",url_for(:controller => "skm/entry_templates", :action=>"get_owned_elements_data", :template_id => @entry_template,:format=>"json"),
                       [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.template", :width => "100px"},
                        {:key=>"detail_id",:formatter=>"Y.irm.template", :hidden => true},
-                       {:key=>"detail_required_flag",:label=>t(:label_skm_entry_template_element_required),:sortable=>true,:formatter=>"Y.irm.template", :width => "40px"},
-                       {:key=>"entry_template_element_code",:label=>t(:label_skm_entry_template_element_code),:sortable=>true, :width => "15%"},
-                       {:key=>"name",:label=>t(:name),:sortable=>true, :width => "20%"},
-                       {:key=>"description",:label=>t(:description),:sortable=>true},
-                       {:key=>"detail_rows",:label=>t(:label_skm_entry_template_element_rows),:sortable=>true, :width => "80px"}
+                       {:key=>"detail_required_flag",:label=>t(:label_skm_entry_template_element_required),:formatter=>"Y.irm.template", :width => "40px"},
+                       {:key=>"entry_template_element_code",:label=>t(:label_skm_entry_template_element_code), :width => "15%"},
+                       {:key=>"name",:label=>t(:name), :width => "20%"},
+                       {:key=>"description",:label=>t(:description)},
+                       {:key=>"detail_rows",:label=>t(:label_skm_entry_template_element_rows), :width => "80px"}
                        ]) %>
       </div>
     </div>
