--- a/app/views/skm/file_managements/_data_grid.html.erb
+++ b/app/views/skm/file_managements/_data_grid.html.erb
@@ -28,11 +28,11 @@
         </div>
         <%= datatable("skm_files_list",url_for(:action=>"get_data",:format=>"json"),
                   [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.template",:width=>"50px"},
-                   {:key=>"data_file_name",:label=>t(:label_skm_file_name),:formatter=>"Y.irm.template",:sortable=>true, :searchable => true,:width=>"15%"},
+                   {:key=>"data_file_name",:label=>t(:label_skm_file_name),:formatter=>"Y.irm.template", :searchable => true,:width=>"15%"},
                    {:key=>"category_name",:label=>t(:label_skm_file_category), :width=>"15%"},
                    {:key=>"description",:label=>t(:description), :searchable => true,:width=>"25%"},
-                   {:key=>"data_file_size",:label=>t(:label_skm_file_size),:sortable=>true, :width => "80px"},
-                   {:key=>"data_updated_at",:label=>t(:label_skm_file_data_updated_at),:sortable=>true,:width=>"40px"},
+                   {:key=>"data_file_size",:label=>t(:label_skm_file_size), :width => "80px"},
+                   {:key=>"data_updated_at",:label=>t(:label_skm_file_data_updated_at),:width=>"40px"},
                    {:key=>"version_id", :label=> "version", :hidden => true}],
                    {:paginator_box=>"filesPaginatorBox"})%>
         <div id="filesPaginatorBox"></div>
